# oca_solution_function_agent

./: .~lock.solution_functions.csv#  AGENTS.md  main.py  pyproject.toml  solution_functions.csv  validator_critics.md
config/: config.py
docs/: SFGroupingAgentinstructions.md  high-level-design.md  implementation-explanation.md  implementation_details.md  plan.md
src/: graph.py  vector_store.py
src/agents/: hitl.py  synthesizer.py  validator.py
src/nodes/: hitl.py  synthesizer.py  validator.py  vault.py
src/state/: schema.py
src/tools/: vault_connector.py  vault_tools.py
