[project]
name = "oca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.6",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "typing-extensions>=4.15.0",
]
